--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button" title="Notifications">Dropdown <i class="fa fa-caret-down"></i></button>     
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
-      <a href="#" class="w3-bar-item w3-button">Link</a>
-      <a href="#" class="w3-bar-item w3-button">Link</a>
+      <a href="#work" class="w3-bar-item w3-button">24-Hour Event</a>
+      <a href="#work2" class="w3-bar-item w3-button">Women's Event</a>
       <a href="#" class="w3-bar-item w3-button">Link</a>
     </div>
   </div>
