--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </div>
 
 <div class="w3-quarter">
-<div class="w3-card w3-white">
+<div class="w3-card w3-2018-ultra-violet">
   <img src="/w3images/snow.jpg" alt="Snow" style="width:100%">
   <div class="w3-container">
   <h3>Customer 1</h3>
