--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </div>
 
 <div class="w3-quarter">
-  <img src="background.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="img_snowtops.jpg" alt="Norway" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Rebecca Flex</h3>
   <p>Support</p>
 </div>
