--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div class="w3-quarter">
   <img src="
         2018metrohacks/img/bkg/background.jpg
-      " alt="Background" style="width:45%" class="w3-circle w3-hover-opacity">
+      " alt="Background" >
   <h3>Rebecca Flex</h3>
   <p>Support</p>
 </div>
