--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <div class="w3-row"><br>
 
 <div class="w3-quarter">
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+  <img src="http://pic5.nipic.com/20100131/4273899_013835823156_2.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Johnny Walker</h3>
   <p>Web Designer</p>
 </div>
