--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
   <h3>What can I win?</h3>
 
-    <h4>We’re working with some awesome companies to give out tons of prizes. Check back later to see a list of all the prizes.</h4>
+    <h4>We’re working with some awesome companies to give out tons of prizes. Check back later to see  list of all the prizes.</h4>
 
   </div>
 
