--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 
 
-<h2>About Metrohacks</h2>
+  <h2><center>About Metrohacks</center></h2>
 
 <p style="color:#FFFFFF"><center>MetroHacks is biggest the  high school hackathon, or tech gathering and competition, in New England. For 24 hours, learn about new technology, talk to industry professionals, meet up with friends, and make new ones. Participate in workshops, learn from speeches, and work with experts from companies like , Google, and Red Hat. High school students ages 13-18 can come, regardless of experience. The event is completely free, and meals are provided for all participants.</center></p>
 
@@ -444,9 +444,8 @@
 
 <div class="w3-row-padding w3-center w3-padding-64" id="pricing">
 
-    <h2>PRICING</h2>
+    <h2>Speakers</h2>
 
-    <p>Choose a pricing plan that fits your needs.</p><br>
 
     <div class="w3-third w3-margin-bottom">
 
@@ -574,15 +573,10 @@
 
     <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
 
-      <h3>Address</h3>
 
-      <p>Swing by for a cup of coffee, or whatever.</p>
+     
 
-      <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i>  Chicago, US</p>
-
-      <p><i class="fa fa-phone w3-text-teal w3-xlarge"></i>  +00 1515151515</p>
-
-      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>  test@test.com</p>
+      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i> info@metrohacks.org</p>
 
     </div>
 
@@ -614,9 +608,7 @@
 
       </div>  
 
-      <input class="w3-check" type="checkbox" checked name="Like">
-
-      <label>I Like it!</label>
+   
 
       <button type="submit" class="w3-button w3-right w3-theme">Send</button>
 
