--- a/index.html
+++ b/index.html
@@ -156,71 +156,6 @@
 
 
 
-<!-- Team Container -->
-
-<div class="w3-container w3-padding-64 w3-center" id="team">
-
-<h2>OUR TEAM</h2>
-
-<p>Meet the team - our office rats:</p>
-
-
-
-<div class="w3-row"><br>
-
-
-
-<div class="w3-quarter">
-
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-
-  <h3>Johnny Walker</h3>
-
-  <p>Web Designer</p>
-
-</div>
-
-
-
-<div class="w3-quarter">
-
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-
-  <h3>Rebecca Flex</h3>
-
-  <p>Support</p>
-
-</div>
-
-
-
-<div class="w3-quarter">
-
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-
-  <h3>Jan Ringo</h3>
-
-  <p>Boss man</p>
-
-</div>
-
-
-
-<div class="w3-quarter">
-
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-
-  <h3>Kai Ringo</h3>
-
-  <p>Fixer</p>
-
-</div>
-
-
-
-</div>
-
-</div>
 
 
 
@@ -611,7 +546,7 @@
    
 
       <button type="submit" class="w3-button w3-right w3-theme">Send</button>
-
+<!––find out how to send masil to email-->
       </form>
 
     </div>
@@ -625,6 +560,128 @@
 <!-- Image of location/map -->
 
 <img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%;">
+  
+
+<!-- Team Container -->
+
+<div class="w3-container w3-padding-64 w3-center" id="team">
+
+<h2>Sponsors & Partners</h2>
+
+<p>Meet the companies that have helped our dream become a reality</p>
+
+
+
+<div class="w3-row"><br>
+
+
+
+<div class="w3-quarter">
+
+  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+
+  <h3>Johnny Walker</h3>
+
+  <p>Web Designer</p>
+
+</div>
+
+
+
+<div class="w3-quarter">
+
+  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+
+  <h3>Rebecca Flex</h3>
+
+  <p>Support</p>
+
+</div>
+
+
+
+<div class="w3-quarter">
+
+  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+
+  <h3>Jan Ringo</h3>
+
+  <p>Boss man</p>
+
+</div>
+
+
+
+<div class="w3-quarter">
+
+  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+
+  <h3>Kai Ringo</h3>
+
+  <p>Fixer</p>
+
+</div>
+
+
+
+</div>
+</div>
+  
+<div class="w3-container w3-padding-64 w3-center" id="team">
+<div class="w3-row"><br>
+
+
+
+<div class="w3-quarter">
+
+  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+
+  <h3>Johnny Walker</h3>
+
+  <p>Web Designer</p>
+
+</div>
+
+
+
+<div class="w3-quarter">
+
+  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+
+  <h3>Rebecca Flex</h3>
+
+  <p>Support</p>
+
+</div>
+
+
+
+<div class="w3-quarter">
+
+  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+
+  <h3>Jan Ringo</h3>
+
+  <p>Boss man</p>
+
+</div>
+
+
+
+<div class="w3-quarter">
+
+  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
+
+  <h3>Kai Ringo</h3>
+
+  <p>Fixer</p>
+
+</div>
+
+
+
+</div>
+
 
 
 
