--- a/index.html
+++ b/index.html
@@ -388,25 +388,17 @@
 
         <li class="w3-theme">
 
-          <p class="w3-xlarge">Basic</p>
+          <p class="w3-xlarge">Image</p>
 
         </li>
 
-        <li class="w3-padding-16"><b>10GB</b> Storage</li>
+        <li class="w3-padding-16">Name</li>
 
-        <li class="w3-padding-16"><b>10</b> Emails</li>
+        <li class="w3-padding-16"><b>10</b> Bio</li>
 
-        <li class="w3-padding-16"><b>10</b> Domains</li>
 
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
 
-        <li class="w3-padding-16">
-
-          <h2 class="w3-wide"><i class="fa fa-usd"></i> 10</h2>
-
-          <span class="w3-opacity">per month</span>
-
-        </li>
+  
 
         <li class="w3-theme-l5 w3-padding-24">
 
@@ -510,7 +502,7 @@
 
 <h2>Sponsors & Partners</h2>
 
-<p>Meet the companies that have helped our dream become a reality</p>
+<p>Interested in reaching out to the young hacker community? Email sponsor@metrohacks.org, and view sponsor info here.</p>
 
 
 
@@ -673,7 +665,7 @@
    
 
       <button type="submit" class="w3-button w3-right w3-theme">Send</button>
-<!––find out how to send masil to email-->
+
       </form>
 
     </div>
