--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
   <div class="w3-container w3-display-bottomleft w3-margin-bottom">  
 
-    <button onclick="https://www.google.com.style.display='block'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">About Metrohacks</button>
+    <button onclick="location.href='www.google.com'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
 
   </div>
 
