--- a/index.html
+++ b/index.html
@@ -107,14 +107,9 @@
 <!-- Image Header -->
 
 <div class="w3-display-container w3-animate-opacity">
+  <button class="button button1">Green</button>
 
-  <img src="/w3images/sailboat.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
-
-  <div class="w3-container w3-display-bottomleft w3-margin-bottom">  
-
-    <button onclick="location.href='www.google.com'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
-
-  </div>
+ 
 
 </div>
 
@@ -677,6 +672,28 @@
 
 // Script for side navigation
 
+  .button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+}
+  
+  
 function w3_open() {
 
     var x = document.getElementById("mySidebar");
