--- a/index.html
+++ b/index.html
@@ -693,6 +693,10 @@
   border: 2px solid #4CAF50;
 }
   
+  .button1:hover {
+  background-color: #4CAF50;
+  color: white;
+}
   
 function w3_open() {
 
