--- a/index.html
+++ b/index.html
@@ -107,23 +107,20 @@
 <!-- Image Header -->
 
 <div class="w3-display-container w3-animate-opacity">
-  <button class="button button1">Green</button>
-
  
 
+ <img src="/w3images/sailboat.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
+
+  <div class="w3-container w3-display-bottomleft w3-margin-bottom">  
+
+    <button onclick="location.href='www.google.com'" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
+
+  </div>
+
+
+
 </div>
-
-
-
-
-
-
-
-
   
-
-  
-
 <!-- Work Row -->
 
 <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="about">
@@ -650,7 +647,6 @@
 
   <a class="w3-button w3-large w3-teal w3-hide-small" href="javascript:void(0)" title="Linkedin"><i class="fa fa-linkedin"></i></a>
 
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 
 
 
