--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
   <div class="w3-container w3-display-bottomleft w3-margin-bottom">  
 
-    <button onclick="location.href=www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
+    <button onclick="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
 
   </div>
 
