--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
   <h3>Who can come</h3>
 
-  <h4>All high schoolers, aged 13-19, can come! No experience required - if you're motivated and love tech, you're welcome at MetroHacks.</h4>
+  <h4>All high schoolers, aged 13-19, can come! No experience is required - if you're motivated and love tech, you're welcome at MetroHacks.</h4>
 
   </div>
 
