--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
   <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
 
   <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Work</a>
-
-  <a href="#work2" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Work2</a>
-
+   
   <a href="#pricing" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Price</a>
 
   <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
@@ -105,7 +103,7 @@
 
 <!-- Image Header -->
 
-<div class="w3-display-container w3-animate-opacity">
+<div class="w3-row-padding w3-padding-64 w3-theme-l1">
  
 
 
