--- a/index.html
+++ b/index.html
@@ -639,11 +639,11 @@
 // Script for side navigation
 div {
     display: none;
-    height:30px;
-    width:240px;
-    margin-left:30px;
+    height:"30px";
+    width:"240px";
+    margin-left:"30px";
     position: relative; /* Declared position allows for location changes */
-    top:-10px;
+    top:"-10px";
 }
 
 a:hover + div {
