--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
 
 <div class="w3-row-padding w3-padding-64 w3-theme-l1">
  
+    <button onclick="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Mentor</button>
+
+      <button onclick="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register</button>
 
 
 
