--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 <!-- Image Header -->
 
 <div class="w3-row-padding w3-padding-64 w3-theme-l1">
+  
  
     <button onclick="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Mentor</button>
 
@@ -111,7 +112,7 @@
 
 
 
-    <button onclick="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
+    <a href="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
 
   </div>
 
