--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
 
-    <a href="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
+    <button onclick="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
 
   </div>
 
