--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
 
-  <a href="#" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Logo</a>
+  <a href="#header" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Metrohacks</a>
 
-  <a href="#team" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Team</a>
+  <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
 
-  <a href="#work" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Work</a>
+  <a href="#speakers" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Speakers</a>
    
-  <a href="#pricing" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Price</a>
+  <a href="#sponsors" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Sponsors and Partners</a>
 
   <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
 
@@ -94,7 +94,6 @@
 
     <a href="#contact" class="w3-bar-item w3-button">Contact</a>
 
-    <a href="#" class="w3-bar-item w3-button">Search</a>
 
   </div>
 
@@ -103,7 +102,7 @@
 
 <!-- Image Header -->
 
-<div class="w3-row-padding w3-padding-64 w3-theme-l1">
+<div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
   
  
     <button onclick="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Mentor</button>
@@ -330,7 +329,7 @@
 
 <!-- Pricing Row -->
 
-<div class="w3-row-padding w3-center w3-padding-64" id="pricing">
+<div class="w3-row-padding w3-center w3-padding-64" id="speakers">
 
     <h2>Speakers</h2>
 
@@ -426,11 +425,11 @@
 
 <!-- Team Container -->
 
-<div class="w3-container w3-padding-64 w3-center" id="team">
+<div class="w3-container w3-padding-64 w3-center" id="sponsors">
 
 <h2>Sponsors & Partners</h2>
 
-<p>Interested in reaching out to the young hacker community? Email sponsor@metrohacks.org, and view sponsor info here.</p>
+<p>Interested in reaching out to the young hacker community? Email sponsor@metrohacks.org, and view sponsor info <a href="https://2018.metrohacks.org/sponsorprospectus.pdf">here.</p>
 
 
 
