--- a/index.html
+++ b/index.html
@@ -60,19 +60,6 @@
 
   <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
 
-    <div class="w3-dropdown-hover w3-hide-small">
-
-    <button class="w3-button" title="Notifications">Dropdown <i class="fa fa-caret-down"></i></button>     
-
-    <div class="w3-dropdown-content w3-card-4 w3-bar-block">
-
-      <a href="#" class="w3-bar-item w3-button">Link</a>
-
-      <a href="#" class="w3-bar-item w3-button">Link</a>
-
-      <a href="#" class="w3-bar-item w3-button">Link</a>
-
-    </div>
 
   </div>
 
@@ -336,7 +323,7 @@
 
     <div class="w3-third w3-margin-bottom">
 <a><img src='https://encrypted-tbn2.google.com/images?q=tbn:ANd9GcQB3a3aouZcIPEF0di4r9uK4c0r9FlFnCasg_P8ISk8tZytippZRQ'></a>
-<div>text</div>
+      <words>hello</words>
 
 
     </div>
@@ -640,7 +627,7 @@
 <script>
 
 // Script for side navigation
-div {
+words {
     display: none;
     height:"30px";
     width:"240px";
@@ -649,7 +636,7 @@ div {
     top:"-10px";
 }
 
-a:hover + div {
+a:hover + words {
     display: block;
 }
   
