--- a/index.html
+++ b/index.html
@@ -322,8 +322,12 @@
 
 
     <div class="w3-third w3-margin-bottom">
-<a><img src='https://encrypted-tbn2.google.com/images?q=tbn:ANd9GcQB3a3aouZcIPEF0di4r9uK4c0r9FlFnCasg_P8ISk8tZytippZRQ'></a>
-      <words>hello</words>
+<div class="container">
+  <img src="https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Avatar" class="image">
+  <div class="overlay">
+    <div class="text">Hello World</div>
+  </div>
+</div>
 
 
     </div>
@@ -627,18 +631,47 @@
 <script>
 
 // Script for side navigation
-words {
-    display: none;
-    height:"30px";
-    width:"240px";
-    margin-left:"30px";
-    position: relative; /* Declared position allows for location changes */
-    top:"-10px";
+
+.container {
+  position: relative;
+  width: 50%;
 }
 
-a:hover + words {
-    display: block;
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
 }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+}
+
+.container:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+} 
+  
   
 function w3_open() {
 
