--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta charset="UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
@@ -634,12 +635,12 @@
 
 .container {
   position: relative;
-  width: 50%;
+  width: "50%";
 }
 
 .image {
   display: block;
-  width: 100%;
+  width: "100%";
   height: auto;
 }
 
@@ -649,8 +650,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 100%;
-  width: 100%;
+  height: "100%";
+  width: "100%";
   opacity: 0;
   transition: .5s ease;
   background-color: #008CBA;
