--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
   <h3>When is it?</h3>
 
-    <h4>May 19-20, 2018: Saturday to Sunday, overnight.</h4>
+    <h4>May 19, 2018: Saturday to Sunday, overnight.</h4>
 
   </div>
 
