--- a/index.html
+++ b/index.html
@@ -626,21 +626,15 @@
   </div>
 
 </footer>
-
-
-
-<script>
-
-// Script for side navigation
-
+<style>
 .container {
   position: relative;
-  width: "50%";
+  width: 50%;
 }
 
 .image {
   display: block;
-  width: "100%";
+  width: 100%;
   height: auto;
 }
 
@@ -650,8 +644,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: "100%";
-  width: "100%";
+  height: 100%;
+  width: 100%;
   opacity: 0;
   transition: .5s ease;
   background-color: #008CBA;
@@ -671,8 +665,14 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
-} 
-  
+}
+</style>
+
+<script>
+
+// Script for side navigation
+
+
   
 function w3_open() {
 
