--- a/index.html
+++ b/index.html
@@ -92,7 +92,24 @@
 
 <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
   
- 
+ <div class="section">
+
+        <h1>Welcome To Paradise</h1>
+
+        <div class="video-container">
+            <div class="color-overlay"></div>
+            <video autoplay="" loop="" muted="">
+                <source src="video.mp4" type="video/mp4">
+            </video>
+        </div>
+
+    </div>
+    <div style="height:400px;width:100%">
+    </div>
+
+  
+  
+  
     <button onclick="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Mentor</button>
 
       <button onclick="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register</button>
@@ -324,7 +341,7 @@
 
     <div class="w3-third w3-margin-bottom">
 <div class="container">
-  <img src="https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Avatar" class="image">
+  <img src="https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Avatar" class="image" height="50" width="200">
   <div class="overlay">
     <div class="text">Hello World</div>
   </div>
@@ -665,6 +682,44 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+}
+  
+  
+  .section {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.section h1 {
+  text-align: center;
+  font-size: 6rem;
+  font-family: "Cookie";
+  padding: 20px;
+  margin: 15px;
+  z-index: 1;
+  opacity: 0.7;
+}
+
+.video-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.color-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: lightblue;
+  width: 100%;
+  height: 100vh;
+  opacity: 0.5;
 }
 </style>
 
