--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
 <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
   
- <div class="section">
 
-        <h1>Welcome To Paradise</h1>
+
+        <h1>Metrohacks Women^2</h1>
 
         <div class="video-container">
             <div class="color-overlay"></div>
@@ -103,7 +103,7 @@
             </video>
         </div>
 
-    </div>
+
     <div style="height:400px;width:100%">
     </div>
 
