--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
   
 
-
+    <div class="section">
         <h1>Metrohacks Women^2</h1>
 
         <div class="video-container">
@@ -102,7 +102,7 @@
                 <source src="video.mp4" type="video/mp4">
             </video>
         </div>
-
+  </div>
 
     <div style="height:400px;width:100%">
     </div>
