--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="video-container">
             <div class="color-overlay"></div>
             <video autoplay="" loop="" muted="">
-                <source src="video.mp4" type="video/mp4">
+                <source src="IT.mp4" type="video/mp4">
             </video>
         </div>
   </div>
