--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
 
  <div class="w3-bar w3-theme-d2 w3-left-align">
 
-  <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
 
   <a href="#header" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Metrohacks</a>
 
@@ -98,7 +97,7 @@
         <div class="video-container">
             <div class="color-overlay"></div>
             <video autoplay="" loop="" muted="">
-                <source src="IT.mp4" type="video/mp4">
+                <source src="Video.mp4" type="video/mp4">
             </video>
         </div>
   </div>
