--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
         </div>
   </div>
 
-    <div style="height:400px;width:100%">
-    </div>
+   
 
   <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
 
@@ -129,9 +128,9 @@
 
 
 
-  <h2><center>About Metrohacks</center></h2>
+  <h2 style="font-family:courier"><center>About Metrohacks</center></h2>
 
-<p style="color:#FFFFFF"><center>MetroHacks is biggest the  high school hackathon, or tech gathering and competition, in New England. For 24 hours, learn about new technology, talk to industry professionals, meet up with friends, and make new ones. Participate in workshops, learn from speeches, and work with experts from companies like , Google, and Red Hat. High school students ages 13-18 can come, regardless of experience. The event is completely free, and meals are provided for all participants.</center></p>
+<p style="color:#FFFFFF", style="font-family:courier"><center>MetroHacks is biggest the  high school hackathon, or tech gathering and competition, in New England. For 24 hours, learn about new technology, talk to industry professionals, meet up with friends, and make new ones. Participate in workshops, learn from speeches, and work with experts from companies like , Google, and Red Hat. High school students ages 13-18 can come, regardless of experience. The event is completely free, and meals are provided for all participants.</center></p>
 
 
 
