--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="video-container">
             <div class="color-overlay"></div>
             <video autoplay="" loop="" muted="">
-                <source src="img/Video_2.mp4" type="video/mp4">
+                <source src="https://github.com/MetroHacks/MetroHacksNew/blob/master/img/Video_2.mp4" type="video/mp4">
             </video>
         </div>
   </div>
