--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
         </div>
   </div>
 
-   
+   <button class="button button1", style="font-family:courier">Enter the Website</button>
 
   <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
 
+   <button onclick="window.location.href = 'https://w3docs.com';">
   
-  
-    <button onclick="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Mentor</button>
+    <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Mentor</button>
 
-      <button onclick="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register</button>
-
+      <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register</button>
 
 
-    <button onclick="www.google.com" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
+
+    <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
 
   </div>
 
@@ -645,6 +645,32 @@
 
 </footer>
 <style>
+  .button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+}
+
+.button1:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+  
 .container {
   position: relative;
   width: 50%;
