--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
   </div>
 
-   <button class="button button1", style="font-family:courier">Enter the Website</button>
+  <a href="#aboutinformation">button class="button button1", style="font-family:courier"><center>Enter the Website</center></button></a>
 
   <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
 
@@ -131,7 +131,7 @@
 
 
 
-  <h2 style="font-family:courier"><center>About Metrohacks</center></h2>
+  <div id="aboutinformation"><h2 style="font-family:courier"><center>About Metrohacks</center></h2></div>
 
 <p style="color:#FFFFFF", style="font-family:courier"><center>MetroHacks is biggest the  high school hackathon, or tech gathering and competition, in New England. For 24 hours, learn about new technology, talk to industry professionals, meet up with friends, and make new ones. Participate in workshops, learn from speeches, and work with experts from companies like , Google, and Red Hat. High school students ages 13-18 can come, regardless of experience. The event is completely free, and meals are provided for all participants.</center></p>
 
