--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
   </div>
 
-  <a href="#aboutinformation">button class="button button1", style="font-family:courier"><center>Enter the Website</center></button></a>
+  <a href="#aboutinformation"><button class="button button1", style="font-family:courier"><center>Enter the Website</center></button></a>
 
   <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
 
