--- a/index.html
+++ b/index.html
@@ -658,6 +658,8 @@
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
   cursor: pointer;
+  margin: 0 auto;
+  display: block;
 }
 
 .button1 {
