--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
  <div class="w3-bar w3-theme-d2 w3-left-align">
 
-
+<div id="navbar">
   <a href="#header" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Metrohacks</a>
 
   <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
@@ -59,7 +59,7 @@
   <a href="#sponsors" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Sponsors and Partners</a>
 
   <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
-
+   </div>
  </div>
 
 
@@ -314,16 +314,18 @@
 
 <!-- Container -->
 
-<div class="w3-container" style="position:relative">
+<div class="w3-tooltip w3-right" style="position:absolute;top:-28px;right:24px">
 
   <span class="w3-text w3-padding w3-teal w3-hide-small">Meet the Team</span>  
   
-  <a onclick="w3_open()" class="w3-button w3-xlarge w3-circle w3-teal" style="position:absolute;top:-28px;right:24px">+</a>
+  <a onclick="w3_open()" class="w3-button w3-xlarge w3-circle w3-teal" ><span class="w3-xlarge">+</span></a>
 
 </div>
 
 
 
+  
+  
 <!-- Pricing Row -->
 
 <div class="w3-row-padding w3-center w3-padding-64" id="speakers">
