--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
   <h3>I have more  questions!!</h3>
 
-    <h4>Hit us   up <a href="mailto:webmaster@example.com"> here.</h4>
+    <h4>Hit us   up <a href="mailto:webmaster@example.com"> here.</a></h4>
 
   </div>
 
@@ -314,7 +314,7 @@
 
 <!-- Container -->
 
-<div class="w3-tooltip w3-right" style="position:absolute;top:-28px;right:24px">
+<div class="w3-tooltip w3-right" style="position:absolute;top:-300px;right:24px">
 
   <span class="w3-text w3-padding w3-teal w3-hide-small">Meet the Team</span>  
   
