--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="video-container">
             <div class="color-overlay"></div>
             <video autoplay="" loop="" muted="">
-                <source src="https://htmlpreview.github.io/?https://github.com/MetroHacks/MetroHacksNew/blob/master/img/Video_2.mp4" type="video/mp4">
+                <embed src="https://htmlpreview.github.io/?https://github.com/MetroHacks/MetroHacksNew/blob/master/img/Video_2.mp4" type="video/mp4">
             </video>
         </div>
   </div>
