--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
 <!-- Container -->
 
-<div class="w3-tooltip w3-right" style="position:absolute;top:-100px;right:24px">
+<div class="w3-container" style="position:relative">
 
   <span class="w3-text w3-padding w3-teal w3-hide-small">Meet the Team</span>  
   
