--- a/index.html
+++ b/index.html
@@ -314,14 +314,14 @@
 
 <!-- Container -->
 
-<div class="w3-container" style="position:relative">
+<div class="w3-tooltip w3-right" style="position:relative">
 
   <span class="w3-text w3-padding w3-teal w3-hide-small">Meet the Team</span>  
   
   <a onclick="w3_open()" class="w3-button w3-xlarge w3-circle w3-teal" ><span class="w3-xlarge">+</span></a>
 
 </div>
-
+ 
 
 
   
