--- a/index.html
+++ b/index.html
@@ -84,16 +84,17 @@
 
 
 <!-- Image Header -->
-    <a href="#aboutinformation"><button class="button button1", style="font-family:courier"><center>Enter the Website</center></button></a>
    
   <div class="section">
+        <a href="#aboutinformation"><button class="button button1", style="font-family:courier"><center>Enter the Website</center></button></a>
         <h1>Metrohacks Women^2</h1>
 
         <div class="video-container">
-            <div class="color-overlay"></div>
+            <div class="color-overlay">
             <video autoplay="" loop="" muted="">
                 <embed src="https://htmlpreview.github.io/?https://github.com/MetroHacks/MetroHacksNew/blob/master/img/Video_2.mp4" type="video/mp4">
             </video>
+            </div>
         </div>
   </div>
 
@@ -428,7 +429,7 @@
 
 <h2>Sponsors & Partners</h2>
 
-<p>Interested in reaching out to the young hacker community? Email sponsor@metrohacks.org, and view sponsor info <a href="https://2018.metrohacks.org/sponsorprospectus.pdf">here.</p>
+<p>Interested in reaching out to the young hacker community? Email sponsor@metrohacks.org, and view sponsor info <a href="https://2018.metrohacks.org/sponsorprospectus.pdf">here.</a></p>
 
 
 
