--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
         <h1>Metrohacks Women^2</h1>
 
         <div class="video-container">
-            <div class="color-overlay">
+            <div class="color-overlay"> </div>
             <video autoplay="" loop="" muted="">
                 <embed src="https://htmlpreview.github.io/?https://github.com/MetroHacks/MetroHacksNew/blob/master/img/Video_2.mp4" type="video/mp4">
             </video>
-            </div>
+           
         </div>
+    </div>
   </div>
-
-
+  
   <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
 
 
@@ -330,14 +330,39 @@
     <h2>Speakers</h2>
 
 
-    <div class="w3-third w3-margin-bottom">
-<div class="container">
-  <img src="https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Avatar" class="image" height="50" width="200">
-  <div class="overlay">
-    <div class="text">Hello World</div>
-  </div>
-</div>
+  <div class="w3-third w3-margin-bottom">
 
+      <ul class="w3-ul w3-border w3-hover-shadow">
+
+        <li class="w3-theme">
+
+          <p class="w3-xlarge">Premium</p>
+
+        </li>
+
+        <li class="w3-padding-16"><b>50GB</b> Storage</li>
+
+        <li class="w3-padding-16"><b>50</b> Emails</li>
+
+        <li class="w3-padding-16"><b>50</b> Domains</li>
+
+        <li class="w3-padding-16"><b>Endless</b> Support</li>
+
+        <li class="w3-padding-16">
+
+          <h2 class="w3-wide"><i class="fa fa-usd"></i> 50</h2>
+
+          <span class="w3-opacity">per month</span>
+
+        </li>
+
+        <li class="w3-theme-l5 w3-padding-24">
+
+          <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
+
+        </li>
+
+      </ul>
 
     </div>
 
@@ -435,17 +460,16 @@
 
 <div class="w3-row"><br>
 
-
-
-<div class="w3-quarter">
-
-  <img src="/w3images/avatar.jpg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
-
-  <h3>Johnny Walker</h3>
-
-  <p>Web Designer</p>
-
+  <div class="w3-third w3-margin-bottom">
+<div class="container">
+  <img src="https://images.pexels.com/photos/104827/cat-pet-animal-domestic-104827.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Avatar" class="image" height="50" width="200">
+  <div class="overlay">
+    <div class="text">Hello World</div>
+  </div>
 </div>
+
+
+    </div>
 
 
 
