--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
         <div class="video-container">
             <div class="color-overlay"> </div>
             <video autoplay="" loop="" muted="">
-                <embed src="https://htmlpreview.github.io/?https://github.com/MetroHacks/MetroHacksNew/blob/master/img/Video_2.mp4" type="video/mp4">
+                <source src="https://htmlpreview.github.io/?https://github.com/MetroHacks/MetroHacksNew/blob/master/img/Video_2.mp4" type="video/mp4">
             </video>
            
         </div>
     </div>
-  </div>
+
   
   <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
 
