--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h1>Metrohacks Women^2</h1>
 
         <div class="video-container">
-            <div class="color-overlay"> </div>
+            
             <video autoplay="" loop="" muted="">
                 <source src="https://htmlpreview.github.io/?https://github.com/MetroHacks/MetroHacksNew/blob/master/img/Video_2.mp4" type="video/mp4">
             </video>
@@ -101,16 +101,11 @@
   
   <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
 
-
-  
-   <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Mentor</button>
-
+    <center>
+      <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Mentor</button>
       <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register</button>
-
-
-
-    <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
-
+      <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
+    </center>
   </div>
   
 <!-- Work Row -->
