--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="video-container">
             
             <video autoplay="" loop="" muted="">
-                <source src="https://github.com/MetroHacks/MetroHacksNew/blob/master/img/Video_2.mp4" type="video/mp4">
+                <source src="Video_2.mp4" type="video/mp4">
             </video>
            
         </div>
