--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="enter">
         <div class="video-container">
             
-            <video id="glass" autoplay="" loop="" muted="">
+            <video id="glass" height="200" width="300" autoplay="" loop="" muted="">
                 <source src="Video_2.mp4" type="video/mp4">
             </video>
            
