--- a/index.html
+++ b/index.html
@@ -128,15 +128,11 @@
 
   
 
-  
+<center>
 
 <div class="w3-quarter">
-
 <div class="w3-card w3-white">
-
-
-
-  <div class="w3-container">
+<div class="w3-container">
 
   <h3>Who can come</h3>
 
@@ -184,7 +180,7 @@
 
 </div>
 
-
+    </center>
 
 </div>
 
