--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="enter">
         <div class="video-container">
             
-            <video autoplay="" loop="" muted="">
+            <video autoplay loop muted>
                 <source src="Video_2.mp4" type="video/mp4">
             </video>
            
