--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 
   <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
 
-  <a href="#speakers" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Speakers</a>
+  <a href="#Metrohacks4" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Metrohacks IV</a>
+    
+  <a href="#WomensEvent" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Women's Event</a>  
    
   <a href="#sponsors" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Sponsors and Partners</a>
 
