--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <center>
       <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Mentor</button>
-      <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register for Womens Event</button>
+      <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register</button>
       <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Sponsor</button>
     </center>
   </div>
@@ -323,9 +323,9 @@
   
 <!-- Pricing Row -->
 
-<div class="w3-row-padding w3-center w3-padding-64" id="speakers">
+<div class="w3-row-padding w3-center w3-padding-64" id="Metrohacks4">
 
-    <h2>Speakers</h2>
+    <h1>Metrohacks IV</h1>
 
 
   <div class="w3-third w3-margin-bottom">
