--- a/index.html
+++ b/index.html
@@ -443,9 +443,14 @@
 </div>
 
 
+<!-- Team Container -->
+    
+<div class="w3-container w3-padding-64 w3-center" id="WomensEvent">    
 
-  
-
+<h2> Women's Event </h2>
+    <p></p>
+    
+<button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register</button>    
 <!-- Team Container -->
 
 <div class="w3-container w3-padding-64 w3-center" id="sponsors">
