--- a/index.html
+++ b/index.html
@@ -323,10 +323,11 @@
   
 <!-- Pricing Row -->
 
-<div class="w3-row-padding w3-center w3-padding-64" id="Metrohacks4">
+<div class="w3-row-padding w3-center w3-padding-64" id="sponsors">
 
-    <h1>Metrohacks IV</h1>
+    <h1>Sponsor's & Partnerships</h1>
 
+    <p>Interested in reaching out to the young hacker community? Email sponsor@metrohacks.org, and view sponsor info <a href="https://2018.metrohacks.org/sponsorprospectus.pdf">here.</a></p>
 
   <div class="w3-third w3-margin-bottom">
 
@@ -453,13 +454,9 @@
 <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="w3-button w3-xlarge w3-theme w3-hover-teal" title="Prospectus">Register</button>    
 <!-- Team Container -->
 
-<div class="w3-container w3-padding-64 w3-center" id="sponsors">
+<div class="w3-container w3-padding-64 w3-center" id="Metrohacks4">
 
-<h2>Sponsors & Partners</h2>
-
-<p>Interested in reaching out to the young hacker community? Email sponsor@metrohacks.org, and view sponsor info <a href="https://2018.metrohacks.org/sponsorprospectus.pdf">here.</a></p>
-
-
+<h2>Metrohacks IV</h2>
 
 <div class="w3-row"><br>
 
