--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@
 
 <!-- Image Header -->  
 
-
+<div class="w3-display-container w3-animate-opacity">
+  <img src="/w3images/sailboat.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
+  <div class="w3-container w3-display-bottomleft w3-margin-bottom">  
+  </div>
+</div>
   
   <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="header">
 
