--- a/index.html
+++ b/index.html
@@ -120,16 +120,11 @@
   
 
 <center>
-
-<div class="w3-quarter">
-<div class="w3-card w3-white">
-<div class="w3-container">
-
-  <h3>Who can come</h3>
-
-  <h4>All high schoolers, aged 13-19, can come! No experience is required - if you're motivated and love tech, you're welcome at MetroHacks.</h4>
-
-  </div>
+  <div class="w3-container">
+    <a class="w3-quarter" href="#0">Who can come?</a>
+    <div class="w3-card w3-white">
+        <p> All high schoolers, aged 13-19, can come! No experience is required - if you're motivated and love tech, you're welcome at MetroHacks.</P>
+    </div>
 
   </div>
 
