--- a/index.html
+++ b/index.html
@@ -121,31 +121,21 @@
 
 <center>
   <div class="w3-container">
-    <a class="w3-quarter" href="#0">Who can come?</a>
+      <h1>Who can Come?</h1>
     <div class="w3-card w3-white">
         <p> All high schoolers, aged 13-19, can come! No experience is required - if you're motivated and love tech, you're welcome at MetroHacks.</P>
     </div>
 
   </div>
 
-</div>
-
-   
-
-<div class="w3-quarter">
-
-<div class="w3-card w3-white">
-
   <div class="w3-container">
-
-  <h3>How much does it cost</h3>
-
-  <h4>MetroHacks costs nothing. Registering and attending is free, and you get free food, t-shirts, prizes, swag and lessons.</h4>
-
-  </div>
+      <h1>How much does it cost?</h1>
+    <div class="w3-card w3-white">
+        <p> MetroHacks costs nothing. Registering and attending is free, and you get free food, t-shirts, prizes, swag and lessons.</P>
+    </div>
 
   </div>
-
+    
 </div>
 
 
