--- a/index.html
+++ b/index.html
@@ -120,107 +120,40 @@
   
 
 <center>
-  <div class="w3-container">
+  <div class="w3-container w3-card w3-white">
       <h1>Who can Come?</h1>
-    <div class="w3-card w3-white">
-        <p> All high schoolers, aged 13-19, can come! No experience is required - if you're motivated and love tech, you're welcome at MetroHacks.</P>
-    </div>
-
+      <p> All high schoolers, aged 13-19, can come! No experience is required - if you're motivated and love tech, you're welcome at MetroHacks.</P>
   </div>
 
-  <div class="w3-container">
+  <div class="w3-container w3-card w3-white">
       <h1>How much does it cost?</h1>
-    <div class="w3-card w3-white">
         <p> MetroHacks costs nothing. Registering and attending is free, and you get free food, t-shirts, prizes, swag and lessons.</P>
-    </div>
-
   </div>
+    
+ <div class="w3-container w3-card w3-white">
+      <h1>What should I bring?</h1>
+        <p> Bring a Photo ID,  laptop, charger, sleeping bag, toiletries, change of clothes. We’ll take care of the rest.</P>
+  </div>
+  
+    <div class="w3-container w3-card w3-white">
+      <h1>When is it?</h1>
+        <p>May 19, 2018: Saturday to Sunday, overnight.</P>
+  </div>
+
+    <div class="w3-container w3-card w3-white">
+      <h1>Where is it?</h1>
+        <p>The Harvard SOCH @59 Shepard St, Cambridge, MA. The facilities are used by students at Harvard University!</P>
+  </div>
+   
+   <div class="w3-container w3-card w3-white">
+      <h1>How do I form a team?</h1>
+        <p>You’ll have time to find a team when you arrive. If you already have a team, just list your teammates when you register.</P>
+  </div> 
     
 </div>
 
 
-
-<div class="w3-quarter">
-
-<div class="w3-card w3-white">
-
-  <div class="w3-container">
-
-  <h3>What should I bring?</h3>
-
-  <h4>Bring a Photo ID,  laptop, charger, sleeping bag, toiletries, change of clothes. We’ll take care of the rest.</h4>
-
-  </div>
-
-  </div>
-
-</div>
-
     </center>
-
-</div>
-
-<!-- Work Row2 -->
-
-<div class="w3-row-padding w3-padding-64 w3-theme-l1" id="about2">
-
-
-
-
-
-<div class="w3-quarter">
-
-<div class="w3-card w3-white">
-
-  <div class="w3-container">
-
-  <h3>When is it?</h3>
-
-    <h4>May 19, 2018: Saturday to Sunday, overnight.</h4>
-
-  </div>
-
-  </div>
-
-</div>
-
-
-
-<div class="w3-quarter">
-
-<div class="w3-card w3-white">
-
-  <div class="w3-container">
-
-  <h3>Where is it?</h3>
-
-  <h4>The Harvard SOCH @59 Shepard St, Cambridge, MA. The facilities are used by students at Harvard University!</h4>
-
-  </div>
-
-  </div>
-
-</div>
-
-
-
-<div class="w3-quarter">
-
-<div class="w3-card w3-white">
-
-  <div class="w3-container">
-
-  <h3>How do I form a team?</h3>
-
-  <h4>You’ll have time to find a team when you arrive. If you already have a team, just list your teammates when you register.</h4>
-
-  </div>
-
-  </div>
-
-</div>
-
-
 
 </div>
 
