--- a/index.html
+++ b/index.html
@@ -122,11 +122,12 @@
 <center>
  <ul class="w3-ul>
             
-  <li>          
-  <div class="w3-container w3-card w3-white">
-      <h1>Who can Come?</h1>
-      <p> All high schoolers, aged 13-19, can come! No experience is required - if you're motivated and love tech, you're welcome at MetroHacks.</P>
-  </div>
+            
+  <li class="w3-container w3-card w3-white content-visible">
+      <a class="cd-faq-trigger" href="#0">"Who can Come?"</a>                                                      
+      <div class="cd-faq-trigger">
+        <p> All high schoolers, aged 13-19, can come! No experience is required - if you're motivated and love tech, you're welcome at MetroHacks.</P>
+      </div>
   </li>                                          
 
   <li>                                          
