--- a/index.html
+++ b/index.html
@@ -145,17 +145,17 @@
 
 <button class="accordion">Who can come?</button>
 <div class="panel">
-  <p>All high schoolers, aged 13-19, can come! No experience is required - if you're motivated and love tech, you're welcome at MetroHacks.</p>
+  <p class="w3-black">All high schoolers, aged 13-19, can come! No experience is required - if you're motivated and love tech, you're welcome at MetroHacks.</p>
 </div>
 
 <button class="accordion">How much does it cost?</button>
 <div class="panel">
-  <p>MetroHacks costs nothing. Registering and attending is free, and you get free food, t-shirts, prizes, swag and lessons.</p>
+  <p class="w3-black">MetroHacks costs nothing. Registering and attending is free, and you get free food, t-shirts, prizes, swag and lessons.</p>
 </div>
 
 <button class="accordion">What should I bring?</button>
 <div class="panel">
-  <p>Bring a Photo ID,  laptop, charger, sleeping bag, toiletries, change of clothes. We’ll take care of the rest.</p>
+  <p class="w3-black">Bring a Photo ID,  laptop, charger, sleeping bag, toiletries, change of clothes. We’ll take care of the rest.</p>
 </div>
 
 <script>
