--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </video>
            
             </div>
-            <a href="#aboutinformation"><button class="w3-button w3-xlarge w3-theme w3-hover-teal"><center>Enter the Website</center></button></a>
+            <a href="#aboutinformation"><button class="btn"><center>Enter the Website</center></button></a>
 
         </div>
 
@@ -520,7 +520,7 @@ for (i = 0; i < acc.length; i++) {
 
 
 .enter .btn:hover {
-  background-color: green;
+  background-color: teal;
 }    
     
  #glass{
