--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@ for (i = 0; i < acc.length; i++) {
     </center>
   </div>
     
-<h1>Sponsor's & Partnerships</h1>
+    <h1>Sponsors</h1>
 
     <p>Interested in reaching out to the young hacker community? Email sponsor@metrohacks.org, and view sponsor info <a href="https://2018.metrohacks.org/sponsorprospectus.pdf">here.</a></p>
-
+<h1>Partnerships</h1>
     
 <div class="w3-row"><br>
 
