--- a/index.html
+++ b/index.html
@@ -476,12 +476,12 @@ for (i = 0; i < acc.length; i++) {
 
     <div class="w3-col m5">
 
-    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
+    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar"><center>Contact Us</center></span></div>
 
 
      
 
-      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i> info@metrohacks.org</p>
+      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i> <center>info@metrohacks.org</center></p>
 
     </div>
 
