--- a/index.html
+++ b/index.html
@@ -475,14 +475,14 @@ for (i = 0; i < acc.length; i++) {
   <div class="w3-row">
 
     <div class="w3-col m5">
-
-    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar"><h1>Contact Us</h1></span></div>
+<center>
+    <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Us</span></div>
 
 
      
 
-      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i> <h1>info@metrohacks.org</h1></p>
-
+      <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i> info@metrohacks.org</p>
+        </center>
     </div>
 
   </div>
