--- a/index.html
+++ b/index.html
@@ -220,7 +220,9 @@ for (i = 0; i < acc.length; i++) {
   </div>
 </div>
  
-    </div>    
+    </div>  
+         <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="about"></div>
+
         <h1>Partnerships</h1>
     
 <div class="w3-row"><br>
