--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ for (i = 0; i < acc.length; i++) {
 </div>
  
     </div>  
-         <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="about"></div>
+         <div></div>
 
         <h1>Partnerships</h1>
     
