--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ for (i = 0; i < acc.length; i++) {
     </div>
   
 
-<div class="w3-row"><br>
+
 
   <div class="w3-third w3-margin-bottom">
 <div class="container">
@@ -252,7 +252,7 @@ for (i = 0; i < acc.length; i++) {
 
        </div>
 
-   <div class="w3-row"><br>
+   
 
   <div class="w3-third w3-margin-bottom">
 <div class="container">
@@ -262,8 +262,6 @@ for (i = 0; i < acc.length; i++) {
   </div>
 </div>
        </div>
-
-    <div class="w3-row"><br>
 
   <div class="w3-third w3-margin-bottom">
 <div class="container">
@@ -276,6 +274,7 @@ for (i = 0; i < acc.length; i++) {
 
     </div>
 
+    </div>
 
 
 </div>
@@ -287,7 +286,6 @@ for (i = 0; i < acc.length; i++) {
 
 
 
-<div class="w3-row"><br>
 
   <div class="w3-third w3-margin-bottom">
 <div class="container">
@@ -300,7 +298,6 @@ for (i = 0; i < acc.length; i++) {
 
     </div>
 
-<div class="w3-row"><br>
 
   <div class="w3-third w3-margin-bottom">
 <div class="container">
@@ -313,7 +310,6 @@ for (i = 0; i < acc.length; i++) {
 
     </div>
 
-<div class="w3-row"><br>
 
   <div class="w3-third w3-margin-bottom">
 <div class="container">
@@ -322,13 +318,11 @@ for (i = 0; i < acc.length; i++) {
     <div class="text">Hello World</div>
   </div>
 </div>
+</div>
 
 
     </div>
-
-
-
-
+    </div>
     
     
     <!-- Pricing Row -->
