--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-w3schools.css">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
@@ -59,7 +59,7 @@
  <div class="w3-bar w3-theme-d2 w3-left-align">
 
 <div id="navbar">
-  <a href="#header" class="w3-bar-item w3-button w3-teal"><i class="fa fa-home w3-margin-right"></i>Metrohacks</a>
+  <a href="#header" class="w3-bar-item w3-button w3-ultra-violet"><i class="fa fa-home w3-margin-right"></i>Metrohacks</a>
 
   <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
 
